--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,58 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="page-header">
+  <h1><%=t ".title", default: "My Account" %></h1>
+</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form-horizontal form-user"}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <fieldset>
+    <div class="form-group">
+      <%= f.label :optimizely_api_key, class: "control-label col-md-4" %>
+      <div class="col-md-8">
+        <%= f.text_field :optimizely_api_key, class: "text-field form-control", html: {spellcheck: "false"} %>
+      </div>
+    </div>
+  </fieldset>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+  <div class="form-group">
+    <%= f.label :email, class: "control-label col-md-4" %>
+    <div class="col-md-8">
+      <%= f.email_field :email, class: "text-field form-control", html: {spellcheck: "false"} %>
+    </div>
+  </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.label :password, "Password (leave blank if you don't want to change it)", class: "control-label col-md-4" %>
+    <div class="col-md-8">
+      <%= f.password_field :password, class: "text-field form-control", html: {autocomplete: "off"} %>
+    </div>
+  </div>
+     
+  <div class="form-group">
+    <%= f.label :password_confirmation, "Password Confirmation", class: "control-label col-md-4" %>
+    <div class="col-md-8">
+      <%= f.password_field :password_confirmation, class: "text-field form-control", html: {autocomplete: "off"} %>
+    </div>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.label :current_password, "Current Password (if you are changing your password)", class: "control-label col-md-4" %>
+    <div class="col-md-8">
+      <%= f.password_field :current_password, class: "text-field form-control", html: {autocomplete: "off"} %>
+    </div>
+  </div>
+     
+  <div class="form-group">
+    <div class="col-md-offset-4 col-md-8">
+      <%= f.submit "Save", class: "btn btn-primary" %>
+    </div>
+  </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+  <div class="form-group">
+    <div class="col-md-offset-4 col-md-8">
+      <%= render "devise/shared/links" %>
+    </div>
+  </div>
 
-  <div><%= f.submit "Update" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
