--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "My Application", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
+    <%= link_to "Experiment Archive", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,6 +20,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
+              <li><%= link_to "Connect Optimizely", edit_optimizely_setup_path %></li>
+              <li class="divider"></li>
               <li><%= link_to "Edit Account", edit_user_registration_path %></li>
               <li class="divider"></li>
               <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
