--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -1,50 +1,52 @@
-<%- model_class = Experiment -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => Experiment %></h1>
-</div>
 <table class="table table-striped">
+  <%= form_tag(refresh_optimizely_path, method: :post) do %>
+    <% if current_user.last_optimizely_updated_at.present? %>
+      <div class="alert alert-success">
+        Optimizely last scanned <%= distance_of_time_in_words_to_now(current_user.last_optimizely_updated_at) %> ago.
+        <br>
+        <%= current_user.last_optimizely_status %>
+        <%= submit_tag "Re Scan Now", class: "btn btn-primary" %>
+
+      </div>
+    <% else %>
+      <div class="alert alert-warning">
+        Never scanned optimizely account - click "Scan Now" to start
+        <%= submit_tag "Scan Now", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  <% end %>
   <thead>
     <tr>
-      <th>ID</th>
-      <th><%= model_class.human_attribute_name(:screenshot_original) %></th>
-      <th><%= model_class.human_attribute_name(:screenshot_variation) %></th>
-      <th><%= model_class.human_attribute_name(:winner) %></th>
-      <th><%= model_class.human_attribute_name(:confidence) %></th>
-      <th><%= model_class.human_attribute_name(:brief) %></th>
-      <th><%= model_class.human_attribute_name(:hypothesis) %></th>
-      <th><%= model_class.human_attribute_name(:experiment_url) %></th>
-      <th><%= model_class.human_attribute_name(:result_url) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Title</th>
+      <th>Created / Updated</th>
+      <th>Variations</th>
+      <th>Currently</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <% @experiments.each do |experiment| %>
       <tr>
-        <td><%= experiment.id %></td>
-        <td><%= experiment.screenshot_original %></td>
-        <td><%= experiment.screenshot_variation %></td>
-        <td><%= experiment.winner %></td>
-        <td><%= experiment.confidence %></td>
-        <td><%= experiment.brief %></td>
-        <td><%= experiment.hypothesis %></td>
-        <td><%= experiment.experiment_url %></td>
-        <td><%= experiment.result_url %></td>
-        <td><%=l experiment.created_at, format: :long %></td>
+        <td><%= experiment.description %></td>
         <td>
-          <%= link_to experiment_path(experiment), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
+          Created: <%= experiment.optimizely_created_at.strftime('%D') %> <br>
+          Last Update: <%= experiment.optimizely_last_updated_at.strftime('%D') %>
+        </td>      
+        <td>
+          <% experiment.variations.each do |v| %>
+            <%= image_tag(v.screencap.url(:thumb)) unless v.screencap.blank? %>
+          <% end %>
+        </td>
+        <td><%= experiment.status %></td>
+        <td>
+          <%= link_to experiment_path(experiment), :class => 'btn btn-xs', :title => "details" do %>
             <%= glyph 'info-sign' %>
-            <%= glyph 'pencil' %>
           <%- end -%>
-          <%= link_to experiment_path(experiment), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
-            <%= glyph 'remove' %>
+          <%= link_to edit_experiment_path(experiment), :class => 'btn btn-xs', :title => "edit" do %>
+            <%= glyph 'pencil' %>
           <%- end -%>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_experiment_path,
-            :class => 'btn btn-primary' %>
