--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Landings#index</h1>
-<p>Find me in app/views/landings/index.html.erb</p>
+<div class="page-header">
+  <h1>Experiment Archiver</h1>
+</div>
+<p>
+  My attempt to automate Kyle Rush's "Experiment Archive Template" from his 
+  <%= link_to "Mozcon 2014 talk", "http://bit.ly/1mhvqth" %>.
+</p>
+<h3>How To Use It</h3>
+<p>
+  You'll need your Optimizely API key to use this - find it on your Optimizely account page under "Tokens"
+  (<%= link_to "https://www.optimizely.com/tokens", "https://www.optimizely.com/tokens" %>)
+</p>
+<h3>Questions Or Comments</h3>
+<p>
+  I built this in like three hours, sorry for any bugs! Please send questions, comments, or suggestions to 
+  <%= link_to "@willronco", "http://twitter.com/wronco" %>
+</p>
