--- a/app/views/optimizely_setup/edit.html.erb
+++ b/app/views/optimizely_setup/edit.html.erb
@@ -1,5 +1,10 @@
 <div class="page-header">
   <h1><%=t ".title", default: "My Optimizely Account" %></h1>
+  <p>
+    Find your Optimizely API key at
+    <%= link_to "https://www.optimizely.com/tokens", "https://www.optimizely.com/tokens" %>
+    <br>It looks like this: <strong>1123abcded23dadad3badcafe1:b42ba5fa</strong>
+  </p>
 </div>
 
 <%= form_for(current_user, url: update_optimizely_setup_path, html: { method: :put, class: "form-horizontal form-user"}) do |f| %>
