--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -5,6 +5,11 @@
   My attempt to automate Kyle Rush's "Experiment Archive Template" from his 
   <%= link_to "Mozcon 2014 talk", "http://bit.ly/1mhvqth" %>.
 </p>
+<h3>What Does It Do</h3>
+<ul>
+  <li>Takes screenshots of the A and B (and C, etc) versions of each of your Optimizely experiments.</li>
+  <li>Lets you annotate each experiment with a brief, hypothesis, confidence level, etc.</li>
+</ul>
 <h3>How To Use It</h3>
 <p>
   You'll need your Optimizely API key to use this - find it on your Optimizely account page under "Tokens"
