--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -10,6 +10,10 @@
   <li>Takes screenshots of the A and B (and C, etc) versions of each of your Optimizely experiments.</li>
   <li>Lets you annotate each experiment with a brief, hypothesis, confidence level, etc.</li>
 </ul>
+<h3>Screenshots</h3>
+<%= image_tag "list.png" %>
+<%= image_tag "detail.png" %>
+
 <h3>How To Use It</h3>
 <p>
   You'll need your Optimizely API key to use this - find it on your Optimizely account page under "Tokens"
