More readme, and fix my twitter handle :-)

--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -22,5 +22,5 @@
 <h3>Questions Or Comments</h3>
 <p>
   I built this in like three hours, sorry for any bugs! Please send questions, comments, or suggestions to 
-  <%= link_to "@willronco", "http://twitter.com/wronco" %>
+  <%= link_to "@willronco", "http://twitter.com/willronco" %>
 </p>
