--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -1,8 +1,10 @@
-<div class="page-header">
-  <h1>Experiment Archiver</h1>
+<div class="alert alert-info">
+  Built by the <%= link_to "Sphero", "http://www.gosphero.com" %> web team after seeing <%= link_to "@kylerush", "http://twitter.com/kylerush" %>'s talk at Mozcon 2014. We &lt;3 Optimizely
+  for AB testing and conversion optimization.  Please send questions, comments, or suggestions to 
+  <%= link_to "@willronco", "http://twitter.com/willronco" %> or <%= mail_to "will@orbotix.com" %>
 </div>
 <p>
-  My attempt to automate Kyle Rush's "Experiment Archive Template" from his 
+  This app attempts to automate Kyle Rush's "Experiment Archive Template" from his 
   <%= link_to "Mozcon 2014 talk", "http://bit.ly/1mhvqth" %>.
 </p>
 <h3>What Does It Do</h3>
@@ -19,8 +21,4 @@
   You'll need your Optimizely API key to use this - find it on your Optimizely account page under "Tokens"
   (<%= link_to "https://www.optimizely.com/tokens", "https://www.optimizely.com/tokens" %>)
 </p>
-<h3>Questions Or Comments</h3>
-<p>
-  I built this in like three hours, sorry for any bugs! Please send questions, comments, or suggestions to 
-  <%= link_to "@willronco", "http://twitter.com/willronco" %>
-</p>
+
