--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -22,3 +22,6 @@
   (<%= link_to "https://www.optimizely.com/tokens", "https://www.optimizely.com/tokens" %>)
 </p>
 
+<h3>Yes</h3>
+<p>
+  It's also on GitHub. <%= link_to "https://github.com/wronco/experiment_archive", "https://github.com/wronco/experiment_archive" %>
